webapp/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  type: NodePort
  ports:
  - port: 8081
    targetPort: 80
  selector:
    app: webapp
